added test for circumcircle

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,13 @@
 include(AddCatch2)
 
-add_executable(UnitTests test_main.cpp)
+add_executable(UnitTests test_main.cpp ../delaunay/delaunay.cpp)
 
 target_link_libraries(UnitTests PRIVATE Catch2::Catch2WithMain)
+
+target_include_directories(UnitTests PRIVATE
+    ../delaunay
+    ../eigen-3.4.0
+)
 
 include(CTest)
 include(Catch)
